--- a/propuestas.html
+++ b/propuestas.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+ <body>
 <!-- Juan Pablo Flores-->
 <hgroup>
     <h1> Manera de preparar Cereal con Leche</h1>
@@ -8,12 +11,34 @@
 <p>Describir cual sería la manera correcta de preparar cereal con leche si es que hay una manera corrcta.</p>
 <!-- Fin tema 1-->
 
-<!--Juan Pablo FLores Corona-->
+<!--Juan Pablo Flores-->
 <hgroup>
     <h1>Ventajas de hacer ejercicio</h1>
     <h3>En que te ayuda hacer ejercicio</h3>
-    <h3> que tipo de ejercicio es el mejor</h3>
+    <h3>Diferentes instrumentos musicales</h3>
     <h3>Repercusiones de no hacer ejercicio</h3>
 </hgroup>
 <p>Hacer ejercicio es algo muy saludable y que todos deberíamos hacer</p>
 <!--Fin de tema 2-->
+
+<!--Alexis Cuevas-->
+<hgroup>
+    <h1>La musica</h1>
+    <h3>Generos musicales</h3>
+    <h3>Diferentes instrumentos musicales</h3>
+    <h3>Como hacer musica</h3>
+</hgroup>
+<p>La musica es algo tan universal y hay diferentes tipos de conocerla</p>
+<!--Fin de tema 3-->
+
+<!--Alexis Cuevas-->
+<hgroup>
+    <h1>Basketball</h1>
+    <h3>Diferentes Ligas en dodne jugar</h3>
+    <h3>Los mejores equipos del mundo</h3>
+    <h3>Como jugar Basketball</h3>
+</hgroup>
+<p>el basketball es un gran deporte conocido por todo el mundo</p>
+<!--Fin de tema 4-->
+ </body>
+</html>
