--- a/alexistema1.html
+++ b/alexistema1.html
@@ -22,7 +22,7 @@
         <h4>¿Que es la musica?</h4>
      <p>Se conoce como música a la combinación ordenada de ritmo, melodía y armonía que resulta agradable a los oídos. Por su carácter inmaterial, la música se considera un arte temporal o del tiempo, al igual que la literatura.</p>
     </div>
- <footer></footer>
+ <footer>alexis</footer>
  <aside></aside>
  </article>
 </main>
