--- a/alexistema1.html
+++ b/alexistema1.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es"> 
-<head> 
-<meta charset="utf-8">
+    <head> 
+    <meta charset="utf-8">
  <title>Blog de Musica</title>
-</head>
+    </head>
 <body>
-<section>
- <header>
- <h1>La musica en el mundo</h1>
-</header>
+ <section>   
+  <header>
+    <h1>La musica en el mundo</h1>
+  </header>
 
 <main>
     <article>
@@ -19,6 +19,9 @@
         </hgroup>
     </header>
     <div>
+        <li><a href="https://alamos.seminare.dev">Seminare</a></li>
+        <li><a href="https://www.amazon.com/">Amazon</a></li>
+        <li><a href="https://www.pornhub.com/">Biblioteca Virtual</a></li>
         <h4>¿Que es la musica?</h4>
      <p>Se conoce como música a la combinación ordenada de ritmo, melodía y armonía que resulta agradable a los oídos. Por su carácter inmaterial, la música se considera un arte temporal o del tiempo, al igual que la literatura.</p>
     </div>
@@ -28,6 +31,6 @@
 </main>
 
 
-</section>
+ </section>
 </body>
 </html>
