--- a/alexistema2.html
+++ b/alexistema2.html
@@ -14,17 +14,63 @@
     <article>
     <header>
         <hgroup>
-            <h2>Servicio ideal</h2>
-            <h3>24/11/21</h3>
+            <h2></h2>
+            <h3>30/11/21</h3>
         </hgroup>
     </header>
+
     <div>
-        <h4>Juguemos basketball</h4>
+     <h4>Top equipos de la NBA</h4>
+        <ol reversed>
+            <li>Dallas Mavericks</li>
+            <li>Charlotte Hornets</li>
+            <li>Milwakee Bucks</li>
+            <li>Washington Wizards</li>
+            <li>Miami Heat</li>
+            <li>Chicago Bulls</li>
+            <li>Utah Jazz</li>
+            <li>Brooklyn Nets</li>
+            <li>Phoenix Suns</li>
+            <li>Golden State Warriors</li>
+       </ol>  
+    </div>
+ </article>
+
+ <article>
+     <div></div>
+     <header>
+        <hgroup>
+            <h2>¿Que es el basketball?</h2>
+            <h3>30/11/21</h3>
+        </hgroup>
+     </header>
      <p>El baloncesto, basquetbol o básquetbol (del inglés basketball; de basket, ‘canasta’, y ball, ‘pelota’),  o simplemente básquet,  es un deporte de equipo que se puede desarrollar tanto en pista cubierta como en descubierta, en el que dos conjuntos de cinco jugadores cada uno, intentan anotar puntos, también llamados canastas o dobles y/o triples introduciendo un balón en un aro colocado a 3,05 metros del suelo del que cuelga una red, lo que le da un aspecto de cesta o canasta.</p>
+    </div>
+
+    <div>
+     <h4>Top equipos de la NBA</h4>
+        
+        <h5>basket</h5>
+
+        <ol reversed>
+            <li><a href="https://www.nba.com/mavericks/">Dallas Mavericks</a></li>
+            <li><a href="https://www.nba.com/hornets/">Charlotte Hornets</a></li>
+            <li><a href="https://www.nba.com/bucks/">Milwakee Bucks</a></li>
+            <li><a href="https://www.nba.com/wizards/">Washington Wizards</a></li>
+            <li><a href="https://www.nba.com/heat/">Miami Heat</a></li>
+            <li><a href="https://www.nba.com/bulls/">Chicago Bulls</a></li>
+            <li><a href="https://www.nba.com/jazz/">Utah Jazz</a></li>
+            <li><a href="https://www.nba.com/nets/">Brooklyn Nets</a></li>
+            <li><a href="https://www.nba.com/suns/">Phoenix Suns</a></li>
+            <li><a href="https://www.nba.com/warriors/">Golden State Warriors</a></li>
+       </ol>  
     </div>
  <footer>alexis</footer>
  <aside></aside>
  </article>
+
+
+
 </main>
 
 
