--- a/alexistema2.html
+++ b/alexistema2.html
@@ -14,7 +14,7 @@
     <article>
     <header>
         <hgroup>
-            <h2></h2>
+            <h2><img src="assets/images/basketball-ball.png" alt="basketball" height="60px" width="auto"></h2>
             <h3>30/11/21</h3>
         </hgroup>
     </header>
