--- a/alexistema1.html
+++ b/alexistema1.html
@@ -8,13 +8,14 @@
  <section>   
   <header>
     <h1>La musica en el mundo</h1>
+    <h2><img src="assets/images/musica.png" alt="musica" height="60px" width="auto"></h2>
   </header>
 
 <main>
     <article>
     <header>
         <hgroup>
-            <h2>¿comoves?</h2>
+            <h2>Musica</h2>
             <h3>24/11/21</h3>
         </hgroup>
     </header>
@@ -25,6 +26,9 @@
         <h4>¿Que es la musica?</h4>
      <p>Se conoce como música a la combinación ordenada de ritmo, melodía y armonía que resulta agradable a los oídos. Por su carácter inmaterial, la música se considera un arte temporal o del tiempo, al igual que la literatura.</p>
     </div>
+    <figure>
+        <iframe src="https://www.youtube.com/watch?v=ltmO9XQVdSg" frameborder="0" width="200px"></iframe>
+      </figure>
  <footer>alexis</footer>
  <aside></aside>
  </article>
