--- a/jpflorestema1.html
+++ b/jpflorestema1.html
@@ -16,6 +16,7 @@
         <hgroup>
             <h2>Ingredientes necesarios</h2>
             <h3>¿Va primero la leche o el cereal?</h3>
+            <h4><img src="assets/images/Lucky charms.jpeg" alt="cereal" height="60px" width="auto"></h4>
         </hgroup>
     </header>
     <div>
@@ -40,6 +41,9 @@
        </ol>  
      <p>El cereal con leche se debe de preparar con 2 ingredientes. Primero se agrega cereal y luego leche, es opcional agregar cualquier otro tipo de ingredietne. Se comen al gusto ya sea crujientes o esperar a que se remojen.</p>
     </div>
+    <figure>
+        <iframe src="https://www.youtube.com/watch?v=KVPx8Q1E46M" frameborder="0" width="200px"></iframe>
+      </figure>
  <footer>Juan Pablo</footer>
  <aside></aside>
  </article>
