--- a/alexistema2.html
+++ b/alexistema2.html
@@ -2,6 +2,7 @@
 <html lang="es"> 
 <head> 
 <meta charset="utf-8">
+<link rel="stylesheet" href="assets/styles/estilosalexis.css">
  <title>Blog del Basketball</title>
 </head>
 <body>
@@ -67,9 +68,9 @@
             <span>-Michael Jordan</span> <a href="https://psicologiaymente.com/reflexiones/frases-michael-jordan" target="_blank">michaeljordaninfo@jumpdc.com</a>
         </div>
        
-        <blockquote>
+        <blockquote cite="https://psicologiaymente.com/reflexiones/frases-michael-jordan">
             <p>Nunca digas nunca. Porque los límites, como el miedo, a menudo son sólo una ilusión</p>
-        </blockquote>
+               </blockquote>
         
     </footer>
  <aside></aside>
