--- a/alexistema2.html
+++ b/alexistema2.html
@@ -57,7 +57,7 @@
 
     <footer>
         <blockquote cite="https://psicologiaymente.com/reflexiones/frases-michael-jordan">
-            <p>Nunca digas nunca. Porque los límites, como el miedo, a menudo son sólo una ilusión</p>
+            <p class="cuevas">Nunca digas nunca. Porque los límites, como el miedo, a menudo son sólo una ilusión</p>
         </blockquote>
 
         <div>
