--- a/alexistema2.html
+++ b/alexistema2.html
@@ -45,9 +45,8 @@
                     esfuerzo físico, de tal manera que el tipo de respuesta dado diferirá en función del grado de estrés
                     aplicado a ese cuerpo.
                 </div>
-                <footer>
-                    <p>alexis.cuevas07</p>
-                </footer>
+                <footer><span>-Alexis Cuevas</span> <a
+                    href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
             </article>
 
             <article>
@@ -63,7 +62,8 @@
                     puntos, también llamados canastas o dobles y/o triples introduciendo un balón en un aro colocado a
                     3,05 metros del suelo del que cuelga una red, lo que le da un aspecto de cesta o canasta.</p>
                 </div>
-                <footer>alexis.cuevas07</footer>
+                <footer><span>-Alexis Cuevas</span> <a
+                    href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
             </article>
 
             <article>
@@ -84,13 +84,23 @@
                         <li><a href="https://www.nba.com/warriors/">Golden State Warriors</a></li>
                     </ol>
                 </div>
-                <footer>alexis.cuevas07</footer>
+                <footer><span>-Alexis Cuevas</span> <a
+                    href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
             </article>
+            <article>
+            <figure class="ilustracion">
+                <iframe src="https://www.youtube.com/8QXHzxE0WkQ" frameborder="0" width="200px"></iframe>
+                <figcaption>Yo y el basketball</figcaption>
+            </figure>
+            <footer><span>-Alexis Cuevas</span> <a
+                href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
+        </article>
 
             <figure class="ilustracion">
                 <iframe src="https://www.youtube.com/watch?v=LAr6oAKieHk" frameborder="0" width="200px"></iframe>
                 <figcaption>Este video son los hilights de Michael Jordan</figcaption>
             </figure>
+
             <article>
                 <footer>
                     <blockquote cite="https://psicologiaymente.com/reflexiones/frases-michael-jordan">
