--- a/alexistema2.html
+++ b/alexistema2.html
@@ -45,7 +45,7 @@
                     esfuerzo físico, de tal manera que el tipo de respuesta dado diferirá en función del grado de estrés
                     aplicado a ese cuerpo.
                 </div>
-                <footer><span>-Alexis Cuevas</span> <a
+                <footer><span>-Alexis Cuevas</span> <a 
                     href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
             </article>
 
@@ -123,7 +123,7 @@
         <aside>
 
         </aside>
-        <footer>
+        <footer class="footerblog">
             <div><span>Alexis Cuevas</span></div>
             <div>Blog creado en el Colegio Alamos</div>
             <div><span>Juan Pablo Flores</span></div>
