--- a/alexistema2.html
+++ b/alexistema2.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html" target="_blank">Principal</a></li>
+            <li><a class="resaltado" href="index.html" target="_blank">Principal</a></li>
             <li><a href="alexistema1.html">Mi tema 1</a></li>
             <!-- Temas de mi equipo -->
             <li><a href="jpflorestema1.html">JP tema 1</a></li>
