--- a/alexistema2.html
+++ b/alexistema2.html
@@ -44,7 +44,8 @@
                     una creciente actividad física. El cuerpo realiza aprendizajes para adaptarse a un mayor o menor
                     esfuerzo físico, de tal manera que el tipo de respuesta dado diferirá en función del grado de estrés
                     aplicado a ese cuerpo.
-                    <figure class="img"><img src="assets/images/Zach.png" alt="kb-mj" height="300px" width="auto"></figure>
+                    <figure class="img"><img src="assets/images/Zach.png" alt="kb-mj" height="300px" width="auto">
+                    <figcaption>DeRozan y Lavine en su mejor partido de la temporada</figcaption></figure>
                 </div>
                 <footer><span>-Alexis Cuevas</span> <a 
                     href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
@@ -63,7 +64,7 @@
                     cubierta como en descubierta, en el que dos conjuntos de cinco jugadores cada uno, intentan anotar
                     puntos, también llamados canastas o dobles y/o triples introduciendo un balón en un aro colocado a
                     3,05 metros del suelo del que cuelga una red, lo que le da un aspecto de cesta o canasta.</p>
-                    <figure><img src="assets/images/kb-mj.jpg" alt="kb-mj" height="300px" width="auto"></figure>
+                    <figure><img src="assets/images/kb-mj.jpg" alt="kb-mj" height="300px" width="auto"> <figcaption>Koobe y Jordan en su primer partido juntos</figcaption></figure>
                 </div>
 
                 <footer><span>-Alexis Cuevas</span> <a
@@ -87,7 +88,7 @@
                         <li><a href="https://www.nba.com/suns/">Phoenix Suns</a></li>
                         <li><a href="https://www.nba.com/warriors/">Golden State Warriors</a></li>
                     </ol>
-                    <figure class="img"><img src="assets/images/allstar.png" alt="allstar" height="300px" width="auto"></figure>
+                    <figure class="img"><img src="assets/images/allstar.png" alt="allstar" height="300px" width="auto"><figcaption>Logo del All Star 2022</figcaption></figure>
                 </div>
                 <footer><span>-Alexis Cuevas</span> <a
                     href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
@@ -114,7 +115,7 @@
         
                 <header>
                     <hgroup>
-                        <h2>Beneficios del basquetbol a la salud</h2>
+                        <h2><img src="assets/images/nbalogo.png" alt=logo height="60px" width="auto">Beneficios del basquetbol a la salud</h2>
                         <h3>30/11/21</h3>
                     </hgroup>
                 </header>
@@ -157,6 +158,7 @@
             </article>
 
             <article>
+                <h2>Mi video de el Basketball</h2>
             <figure class="ilustracion">
                 <iframe src="https://www.youtube.com/8QXHzxE0WkQ" frameborder="0" width="200px"></iframe>
                 <figcaption>Yo y el basketball</figcaption>
@@ -164,12 +166,13 @@
             <footer><span>-Alexis Cuevas</span> <a
                 href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
         </article>
-
+        <article>
+            <h2>MJ y sus highlights</h2>
             <figure class="ilustracion">
                 <iframe src="https://www.youtube.com/watch?v=LAr6oAKieHk" frameborder="0" width="200px"></iframe>
                 <figcaption>Este video son los hilights de Michael Jordan</figcaption>
             </figure>
-
+        </article>
             <article>
                 <footer>
                     <blockquote cite="https://psicologiaymente.com/reflexiones/frases-michael-jordan">
