--- a/alexistema2.html
+++ b/alexistema2.html
@@ -120,6 +120,7 @@
                     </hgroup>
                 </header>
                  <ul>
+                    <blockquote>
                   <p>Los resultados de practicar el "deporte ráfaga" en el organismo son numerosos y entre ellos se observa:
 
                     <li>Durante la infancia: mayor desarrollo de estatura, masa muscular, reflejos y agilidad.</li>
@@ -153,7 +154,13 @@
                     <figure><img src="assets/images/basketheart.png" alt="corabasket" height="300px" width="auto"></figure>
                 </div>
 
-                <footer><span>-Alexis Cuevas</span> <a
+                <footer>
+                    
+                         <cite><a href="https://www.mayoclinic.org/es-es/healthy-lifestyle/fitness/in-depth/exercise/art-20048389">Beneficios de hacer ejercicio</a></cite>
+                         <span><a href="https://www.quironsalud.es/blogs/es/medicina-deporte/beneficios-baloncesto-salud">Beneficios de hacer basketball</a></span>
+                         <span> <a href="https://www.saludmasdeporte.com/baloncesto-beneficios-salud/">Basketball y salud</a></span>
+                    </blockquote>
+                    <span>-Alexis Cuevas</span> <a
                     href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
             </article>
 
