--- a/alexistema2.html
+++ b/alexistema2.html
@@ -183,7 +183,7 @@
             <article>
                 <footer>
                     <blockquote cite="https://psicologiaymente.com/reflexiones/frases-michael-jordan">
-                        <p class="cuevas">Nunca digas nunca. Porque los límites, como el miedo, a menudo son sólo una
+                        <p id="aidi">Nunca digas nunca. Porque los límites, como el miedo, a menudo son sólo una
                             ilusión</p>
                     </blockquote>
 
