--- a/alexistema1.html
+++ b/alexistema1.html
@@ -44,7 +44,7 @@
         
                 <header>
                     <hgroup>
-                        <h2><img src="assets/images/musica.png" alt="mj" height="90px" width="auto"> ¿Que es la musica?</h2>
+                        <h2><img src="assets/images/musica.png" alt="musica" height="90px" width="auto"> ¿Que es la musica?</h2>
                         <h3>31/01/22</h3>
                     </hgroup>
                 </header>
@@ -58,11 +58,11 @@
 
             <article>
                 <div>
-                    <h4><img src="assets/images/nbalogo.png" alt=logo height="60px" width="auto">Top 10 Equipos de la NBA</h4>
+                    <h4><img src="assets/images/nbalogo.png" alt=logo height="60px" width="auto">Top 10 Artistas</h4>
 
 
                     <ol reversed>
-                        <li><a href="https://www.nba.com/mavericks/">Dallas Mavericks</a></li>
+                        <li><a href="https://www.nba.com/mavericks/"></a></li>
                         <li><a href="https://www.nba.com/hornets/">Charlotte Hornets</a></li>
                         <li><a href="https://www.nba.com/bucks/">Milwakee Bucks</a></li>
                         <li><a href="https://www.nba.com/wizards/">Washington Wizards</a></li>
