--- a/alexistema2.html
+++ b/alexistema2.html
@@ -44,7 +44,7 @@
                     una creciente actividad física. El cuerpo realiza aprendizajes para adaptarse a un mayor o menor
                     esfuerzo físico, de tal manera que el tipo de respuesta dado diferirá en función del grado de estrés
                     aplicado a ese cuerpo.
-                    <figure class="img"><img src="assets/images/Zach.png" alt="kb-mj" height="300px" width="auto">
+                    <figure class="img border"><img src="assets/images/Zach.png" alt="kb-mj" height="300px" width="auto">
                     <figcaption>DeRozan y Lavine en su mejor partido de la temporada</figcaption></figure>
                 </div>
                 <footer><span>-Alexis Cuevas</span> <a 
@@ -151,7 +151,7 @@
                     
                     <li>Estimula la liberación de endorfinas: el buen ánimo de la mayoría de jugadores de baloncesto se debe a que este deporte estimula la producción de las llamadas "hormonas de la felicidad".</li> </p>
                 </ul>
-                    <figure><img src="assets/images/basketheart.png" alt="corabasket" height="300px" width="auto"></figure>
+                    <figure class="cuadro"><img src="assets/images/basketheart.png" alt="corabasket" height="300px" width="auto"></figure>
                 </div>
 
                 <footer>
@@ -193,6 +193,12 @@
                             de Michael Jordan</a>
                     </div>
                 </footer>
+            </article>
+
+            <article>
+                <p class="borde"> hflsshahdguagfuhbfjdhfuiehifhsf</p>
+
+
 
             </article>
 
