--- a/alexistema1.html
+++ b/alexistema1.html
@@ -58,22 +58,22 @@
 
             <article>
                 <div>
-                    <h4><img src="assets/images/nbalogo.png" alt=logo height="60px" width="auto">Top 10 Artistas</h4>
+                    <h4><img src="assets/images/musica.png" alt=logo height="60px" width="auto">Top 10 Artistas en Spotify</h4>
 
 
                     <ol reversed>
-                        <li><a href="https://www.nba.com/mavericks/"></a></li>
-                        <li><a href="https://www.nba.com/hornets/">Charlotte Hornets</a></li>
-                        <li><a href="https://www.nba.com/bucks/">Milwakee Bucks</a></li>
-                        <li><a href="https://www.nba.com/wizards/">Washington Wizards</a></li>
-                        <li><a href="https://www.nba.com/heat/">Miami Heat</a></li>
-                        <li><a href="https://www.nba.com/bulls/">Chicago Bulls</a></li>
-                        <li><a href="https://www.nba.com/jazz/">Utah Jazz</a></li>
-                        <li><a href="https://www.nba.com/nets/">Brooklyn Nets</a></li>
-                        <li><a href="https://www.nba.com/suns/">Phoenix Suns</a></li>
-                        <li><a href="https://www.nba.com/warriors/">Golden State Warriors</a></li>
+                        <li><a href="https://www.adele.com/">Adele</a></li>
+                        <li><a href="https://www.dualipa.com/">Dua Lipa</a></li>
+                        <li><a href="https://www.imaginedragonsmusic.com/">Imagine Dragons</a></li>
+                        <li><a href="https://ctangana.com/">C Tangana</a></li>
+                        <li><a href="https://www.edsheeran.com/">Ed Sheeran</a></li>
+                        <li><a href="https://drakerelated.com/">Drake</a></li>
+                        <li><a href="https://www.kendricklamar.com/">Kendrick Lamar</a></li>
+                        <li><a href="https://www.theweeknd.com/">The Weeknd</a></li>
+                        <li><a href="https://www.taylorswift.com/">Taylor Swift</a></li>
+                        <li><a href="https://www.ticketmaster.com/bad-bunny-tickets/artist/2317395">Bad Bunny</a></li>
                     </ol>
-                    <figure class="img"><img src="assets/images/allstar.png" alt="allstar" height="300px" width="auto"><figcaption>Logo del All Star 2022</figcaption></figure>
+                    <figure class="img"><img src="assets/images/SPOTIFY-PNG.png" alt="Spotify" height="300px" width="auto"><figcaption>Logo Oficial de Spotify</figcaption></figure>
                 </div>
                 <footer><span>-Alexis Cuevas</span> <a
                     href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
@@ -81,15 +81,15 @@
 
             <article>
                 <div>
-                    <h4><img src="assets/images/nbalogo.png" alt=logo height="60px" width="auto">Sitios Oficiales Equipos de la NBA</h4>
+                    <h4><img src="assets/images/600px-Simple_Music.png" alt=logo height="60px" width="auto">Sitios Oficiales de Artistas</h4>
 
                     <ul>
                        
-                        <li><a href="https://www.nba.com/bulls/">Chicago Bulls</a></li>
-                        <li><a href="https://www.nba.com/jazz/">Utah Jazz</a></li>
-                        <li><a href="https://www.nba.com/nets/">Brooklyn Nets</a></li>
-                        <li><a href="https://www.nba.com/suns/">Phoenix Suns</a></li>
-                        <li><a href="https://www.nba.com/warriors/">Golden State Warriors</a></li>
+                        <li><a href="https://drakerelated.com/">Drake</a></li>
+                        <li><a href="https://www.kendricklamar.com/">Kendrick Lamar</a></li>
+                        <li><a href="https://www.theweeknd.com/">The Weeknd</a></li>
+                        <li><a href="https://www.taylorswift.com/">Taylor Swift</a></li>
+                        <li><a href="https://www.ticketmaster.com/bad-bunny-tickets/artist/2317395">Bad Bunny</a></li>
                     </ul>
                 </div>
                 <footer><span>-Alexis Cuevas</span> <a
