--- a/alexistema2.html
+++ b/alexistema2.html
@@ -206,7 +206,13 @@
 
         </main>
         <aside>
+            <H2>Micro Blogging</H2>
+            <div>
+                <span>En el verano de 1984 la fortuna del equipo cambió cuando obtuvieron la tercera elección del Draft de 1984, tras Houston y Portland. Los Rockets eligieron a Hakeem Olajuwon, mientras que los Blazers elegían a Sam Bowie, dejando en bandeja de plata a los Bulls la elección del escolta de la Universidad de Carolina, Michael Jordan.4​
+                     Los nuevos propietarios del equipo decidieron reconstruir el equipo tomando como punto de referencia al novato llamado a hacer historia en la NBA.1​ Jordan acabó la temporada como tercer máximo anotador de la liga y cuarto en robos de balón, siendo elegido Rookie del Año y en el segundo mejor quinteto de la liga.5​
 
+                    Antes de comenzar la siguiente temporada, los Bulls ficharon al base John Paxson, y eligieron en el draft al ala-pívot Charles Oakley, que junto con Jordan y el pívot Dave Corzine formarían la columna vertebral del ataque del equipo en las dos siguientes temporadas. Tras sufrir una rotura en el pie al comienzo de la temporada 1985-86, Jordan acabó como segundo máximo anotador del equipo tras Woolridge. Entraron como octavos y últimos clasificados en los playoffs, por lo que tuvieron que enfrentarse a los Boston Celtics liderados por Larry Bird, que venían de hacer una extraordinaria temporada regular (67 victorias por 15 derrotas). Aunque los Bulls fueron barridos en la eliminatoria por 3-0 Jordan se anotó uno de su larga lista de récords de la NBA, tras anotar 63 puntos en un partido de playoff, haciendo que Larry Bird declarara: "Esta noche, Dios se ha disfrazado de Michael Jordan".</span>
+            </div>
         </aside>
         <footer class="footerblog">
             <div><span>Alexis Cuevas</span></div>
