--- a/jpflorestema1.html
+++ b/jpflorestema1.html
@@ -119,7 +119,30 @@
         <figcaption> Este video explica como preparar cereal</figcaption>
       </figure>
  </article>
+ <article>
+    <header>
+        <hgroup>
+            <h2>La Salud y los Cereales</h2>
+        </hgroup>
+    </header>
+    <div>
+        <p>La ruta entre el campo agricultor y la mesa de las familias es corta. El trayecto inicia en el campo con granos naturales que una vez cosechados son transportados a nuestras cuatro plantas en México donde se cocinan y adicionamos vitaminas y minerales; para después ser inflados, laminados o estirados y por último empacados para distribuirse en todo el país.
+
+            Nuestro compromiso con la sustentabilidad abarca todo el proceso que se debe llevar a cabo para que un cereal Kellogg® sea consumido. Nos sentimos muy orgullosos de que nuestros cereales sean hechos con granos naturales e introducidos en empaques certificados como 100% sustentables.</p>
+        <figure><img src="assets/images/molino.jpg" alt="molino" height="300px" width="auto"></figure>
+        <figcaption>Imagen del molino para el proceso del cereal</figcaption>
+    </div>
+    <footer><span>-JP Flores</span> <a
+        href="https://www.instagram.com/?hl=es-la" target="_blank">@jp_floresc</a></footer>
+    </article>
+
 </main>
+<aside>
+    <H2>Micro Blogging</H2>
+    <div>
+        <span>A finales del siglo XIX, John Kellogg y su hermano Will trabajaban en el Sanatorio de Battle Creek, un centro que seguía las normas adventistas. Los hermanos Kelloggs consideraban que los alimentos salados o picantes incrementaban la líbido, así que para los pacientes preparaban mucha comida basada en cereales con leche. Un día por casualidad dieron con el proceso para producir copos de maiz, que empezaron a servir a los enfermos como remedio antimasturbatorio.</span>
+    </div>
+</aside>
 <aside>
 <footer class="footerblog">
     <div><span>Alexis Cuevas</span></div>
