--- a/alexistema2.html
+++ b/alexistema2.html
@@ -44,7 +44,7 @@
                     una creciente actividad física. El cuerpo realiza aprendizajes para adaptarse a un mayor o menor
                     esfuerzo físico, de tal manera que el tipo de respuesta dado diferirá en función del grado de estrés
                     aplicado a ese cuerpo.
-                    <figure class="img border"><img src="assets/images/Zach.png" alt="kb-mj" height="300px" width="auto">
+                    <figure class="cuadro"><img src="assets/images/Zach.png" alt="kb-mj" height="300px" width="auto">
                     <figcaption>DeRozan y Lavine en su mejor partido de la temporada</figcaption></figure>
                 </div>
                 <footer><span>-Alexis Cuevas</span> <a 
@@ -64,7 +64,7 @@
                     cubierta como en descubierta, en el que dos conjuntos de cinco jugadores cada uno, intentan anotar
                     puntos, también llamados canastas o dobles y/o triples introduciendo un balón en un aro colocado a
                     3,05 metros del suelo del que cuelga una red, lo que le da un aspecto de cesta o canasta.</p>
-                    <figure><img src="assets/images/kb-mj.jpg" alt="kb-mj" height="300px" width="auto"> <figcaption>Koobe y Jordan en su primer partido juntos</figcaption></figure>
+                    <figure class="cuadro"><img src="assets/images/kb-mj.jpg" alt="kb-mj" height="300px" width="auto"> <figcaption>Kobe y Jordan en su primer partido juntos</figcaption></figure>
                 </div>
 
                 <footer><span>-Alexis Cuevas</span> <a
@@ -88,7 +88,7 @@
                         <li><a href="https://www.nba.com/suns/">Phoenix Suns</a></li>
                         <li><a href="https://www.nba.com/warriors/">Golden State Warriors</a></li>
                     </ol>
-                    <figure class="img"><img src="assets/images/allstar.png" alt="allstar" height="300px" width="auto"><figcaption>Logo del All Star 2022</figcaption></figure>
+                    <figure class="cuadro"><img src="assets/images/allstar.png" alt="allstar" height="300px" width="auto"><figcaption>Logo del All Star 2022</figcaption></figure>
                 </div>
                 <footer><span>-Alexis Cuevas</span> <a
                     href="https://www.instagram.com/?hl=es-la" target="_blank">@alexis.cuevas07</a></footer>
@@ -166,7 +166,7 @@
 
             <article>
                 <h2>Mi video de el Basketball</h2>
-            <figure class="ilustracion">
+            <figure class="ilustracion cuadro">
                 <iframe src="https://www.youtube.com/8QXHzxE0WkQ" frameborder="0" width="200px"></iframe>
                 <figcaption>Yo y el basketball</figcaption>
             </figure>
@@ -175,8 +175,8 @@
         </article>
         <article>
             <h2>MJ y sus highlights</h2>
-            <figure class="ilustracion">
-                <iframe src="https://www.youtube.com/watch?v=LAr6oAKieHk" frameborder="0" width="200px"></iframe>
+            <figure class="ilustracion cuadro">
+                <iframe src="https://www.youtube.com/watch?v=LAr6oAKieHk" frameborder="0" width="300px"></iframe>
                 <figcaption>Este video son los hilights de Michael Jordan</figcaption>
             </figure>
         </article>
@@ -197,13 +197,14 @@
 
             <article>
                 <p class="borde"> hflsshahdguagfuhbfjdhfuiehifhsf</p>
-
-
-
             </article>
 
-
-
+            <article>
+                <h2><img src="assets/images/jordan-logo.png" height="60px" width="auto">Biografia de Michael Jordan</h2>
+            <p>(Michael Jeffrey Jordan; Nueva York, 1963) Jugador de baloncesto norteamericano considerado el mejor de la historia de este deporte. Ciertamente, desde que a finales del siglo XIX un profesor de gimnasia estadounidense inventó el baloncesto hasta la década de 1980, nunca se vio un prodigio comparable al de este legendario baloncestista. Con sus 1,98 metros de altura, Michael Jordan fue un tenaz defensor, un excelente anotador y un pasador rápido e imaginativo; pero mucho más llamativa era aún su extraordinaria habilidad para saltar y las acrobáticas maniobras que utilizaba para esquivar la defensa rival y llegar a la canasta. Parecía capaz de permanecer por unos instantes suspendido en el aire; tal facultad o «don del cielo» -nunca mejor dicho- le valió el sobrenombre de Air Jordan.</p>
+            <figure class="cuadro"><img src="assets/images/airjordan.jpg" alt="corabasket" height="300px" width="auto"></figure>
+        </article>
+        
         </main>
         <aside>
             <H2>Micro Blogging</H2>
