--- a/alexistema2.html
+++ b/alexistema2.html
@@ -207,7 +207,8 @@
         
         </main>
         <aside>
-            <H2>Micro Blogging</H2>
+            <H2><img src="assets/images/basketball-ball.png" alt="basketball" height="50px"
+                width="auto">Micro-Blogging</H2>
             <div>
                 <span>En el verano de 1984 la fortuna del equipo cambió cuando obtuvieron la tercera elección del Draft de 1984, tras Houston y Portland. Los Rockets eligieron a Hakeem Olajuwon, mientras que los Blazers elegían a Sam Bowie, dejando en bandeja de plata a los Bulls la elección del escolta de la Universidad de Carolina, Michael Jordan.4​
                      Los nuevos propietarios del equipo decidieron reconstruir el equipo tomando como punto de referencia al novato llamado a hacer historia en la NBA.1​ Jordan acabó la temporada como tercer máximo anotador de la liga y cuarto en robos de balón, siendo elegido Rookie del Año y en el segundo mejor quinteto de la liga.5​
