--- a/alexistema2.html
+++ b/alexistema2.html
@@ -210,10 +210,27 @@
             <H2><img src="assets/images/basketball-ball.png" alt="basketball" height="50px"
                 width="auto">Micro-Blogging</H2>
             <div>
-                <span>En el verano de 1984 la fortuna del equipo cambió cuando obtuvieron la tercera elección del Draft de 1984, tras Houston y Portland. Los Rockets eligieron a Hakeem Olajuwon, mientras que los Blazers elegían a Sam Bowie, dejando en bandeja de plata a los Bulls la elección del escolta de la Universidad de Carolina, Michael Jordan.4​
-                     Los nuevos propietarios del equipo decidieron reconstruir el equipo tomando como punto de referencia al novato llamado a hacer historia en la NBA.1​ Jordan acabó la temporada como tercer máximo anotador de la liga y cuarto en robos de balón, siendo elegido Rookie del Año y en el segundo mejor quinteto de la liga.5​
+                <span><p>El récord de 100 puntos de Wilt Chamberlain en un solo partido sigue vigente
+                    a día de hoy. Sólo Kobe Bryant se le ha acercado, anotando 81 puntos contra
+                    los Toronto Raptors en 2006</p>
+                     <p>James Naismith inventó el baloncesto
+                        En 1891 su jefe de aquel entonces le pide que invente un deporte bajo techo, atribuyéndole la creación del deporte a James Naismith. Profesor de educación física, también escribió el libro original de reglas del baloncesto y fundó el programa de baloncesto de la Universidad de Kansas.</p>
+                    <p>Estados Unidos ha ganado la medalla de oro 15 de las 19 
+                        olimpiadas disputadas. Un hito que será difícil de superar.</p>
+                         <p>No estaba permitido el driblar
+                        Los jugadores nunca podían hacer avanzar la pelota. En cambio, cada jugador tenía que tirarlo desde donde lo atrapara. El primer equipo al que se le atribuye el avance del balón mediante el dribbling fue jugado en Yale en 1897, y la concesión oficial para el dribbling, solo se permitía uno al principio, se adoptó cuatro años después</p>      
+                    <p>Mientras más mejor
+                    El numero de jugadores por lado no estaba especificado. Naismith inventó una actividad invernal de interior y quería un juego lo suficientemente flexible como para incluir a quien quisiera jugar. Durante un tiempo, el número total de jugadores fue un valor predeterminado de 18, nueve por lado, el mismo número que apareció en el primer juego.</p>
+                    <p>Nunca se permitía cargar con el hombro, sujetar, empujar, hacer tropezar o golpear a un oponente. Sin embargo, tales infracciones nunca se consideraron faltas hasta 1910, con el advenimiento de una regla que descalificaban a un jugador por cometer cuatro de ellas.</p>
+                        <p>El juego era mucho más corto
+                            Naismith propuso dos tiempos de 15 minutos, con cinco minutos de descanso entre ellos.</p>
+                          <p>Michael Jordan pagó multas por usar unos zapatos
+                            Probablemente conectes a Michael Jordan con sus legendarios Air Jordans, un calzado ahora icónico debido a sus cifras récord de ventas. Lo que quizás no sepas es que estos zapatos solían estar en contra del código de vestimenta de la NBA. Michael Jordan pagó una multa de la NBA cada vez que los usó en lugar de jugar sin ellos.</p>  
+                            <p>En 1967 los “mates” eran ilegales, se legalizaron luego en 1976.</p>
+                            <p>MJ es considerado el mejor jugador de baloncesto de todos los tiempos con un palmarés y una admiración de mí hacia él que no me cabrían ni en 10 entradas de este blog (sí, me rindo a él).</p>
 
-                    Antes de comenzar la siguiente temporada, los Bulls ficharon al base John Paxson, y eligieron en el draft al ala-pívot Charles Oakley, que junto con Jordan y el pívot Dave Corzine formarían la columna vertebral del ataque del equipo en las dos siguientes temporadas. Tras sufrir una rotura en el pie al comienzo de la temporada 1985-86, Jordan acabó como segundo máximo anotador del equipo tras Woolridge. Entraron como octavos y últimos clasificados en los playoffs, por lo que tuvieron que enfrentarse a los Boston Celtics liderados por Larry Bird, que venían de hacer una extraordinaria temporada regular (67 victorias por 15 derrotas). Aunque los Bulls fueron barridos en la eliminatoria por 3-0 Jordan se anotó uno de su larga lista de récords de la NBA, tras anotar 63 puntos en un partido de playoff, haciendo que Larry Bird declarara: "Esta noche, Dios se ha disfrazado de Michael Jordan".</span>
+                    </span>
+
             </div>
         </aside>
         <footer class="footerblog">
